--- a/templates/success.html
+++ b/templates/success.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Success</title>
-</head>
-<body>
-<h1> Success </h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1 class="display-4 text-center"> Success</h1>
+    <h1 class="display-6 text-center"> Please enter the OTP</h1>
+
+{% endblock %}
