--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,6 +31,7 @@
                     <label for="mobile_no">Mobile No.</label>
                     <input type="number" name="mobile_no" id="mobile_no"
                            placeholder="Your mobile number" class="form-control">
+                    <small id="emailHelp" class="form-text text-muted">Enter the mobile number without the country code</small>
                 </div>
             </div>
 
@@ -43,8 +44,34 @@
                 <div class="form-group col">
                     <label for="state">State</label>
                     <select class=form-control id="state" name="state">
+                        <option value="Andhra Pradesh">Andhra Pradesh</option>
+                        <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                        <option value="Assam">Assam</option>
+                        <option value="Bihar">Bihar</option>
+                        <option value="Chhattisgarh">Chhattisgarh</option>
+                        <option value="Goa">Goa</option>
                         <option value="Gujarat">Gujarat</option>
+                        <option value="Haryana">Haryana</option>
+                        <option value="Himachal Pradesh">Himachal Pradesh</option>
+                        <option value="Jharkhand">Jharkhand</option>
+                        <option value="Karnataka">Karnataka</option>
+                        <option value="Kerala">Kerala</option>
+                        <option value="Madhya Pradesh">Madhya Pradesh</option>
                         <option value="Maharashtra">Maharashtra</option>
+                        <option value="Manipur">Manipur	</option>
+                        <option value="Meghalaya">Meghalaya	</option>
+                        <option value="Mizoram">Mizoram</option>
+                        <option value="Nagaland">Nagaland</option>
+                        <option value="Odisha">Odisha</option>
+                        <option value="Punjab">Punjab</option>
+                        <option value="Rajasthan">Rajasthan</option>
+                        <option value="Sikkim">Sikkim</option>
+                        <option value="Tamil Nadu">Tamil Nadu	</option>
+                        <option value="Telangana">Telangana</option>
+                        <option value="Tripura">Tripura</option>
+                        <option value="Uttar Pradesh">Uttar Pradesh</option>
+                        <option value="Uttarakhand">Uttarakhand</option>
+                        <option value="West Bengal">West Bengal</option>
                     </select>
 
                 </div>
@@ -59,10 +86,6 @@
             <center>
                 <button class="btn btn-primary" type="submit" name="submit" value="Submit">Sign up</button>
             </center>
-
         </form>
-
     </div>
-
-
 {% endblock %}
